fix overflow

--- a/css/theme.css
+++ b/css/theme.css
@@ -6,7 +6,7 @@
 
 body{
     max-height: 100vh;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 html 
